--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
         <script type="text/javascript" src="../static/map/js/china.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
-
+{% block js%}
+{% endblock %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
 
